fixed the hourly scrollbar for 1025px+

--- a/src/style.css
+++ b/src/style.css
@@ -15,8 +15,8 @@
     margin: auto;
   }
   .image-six-chibi {
-    width: 100vw;
-    margin: -10vw 0 -14vw -6vw;
+    width: 95vw;
+    margin: 0 0 -5vw -3vw;
   }
   .container {
     max-width: none;
@@ -127,7 +127,7 @@
   }
   .image-six-chibi {
     width: 100%;
-    margin: -40px 0 -60px -10px;
+    margin-bottom: -20px;
   }
   .container {
     max-width: 90%;
